Minor expansion of avrae commands for stats, health and coins

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,8 +21,10 @@ nav:
     - character.md
     - saves-checks.md
     - combat.md
+    - character-stats.md
     - class-commands.md
     - species-commands.md
+    - currency.md
   - House Rules:
     - hunting-foraging.md
     - downtime.md
