Fix linking of custom actions.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
     - class-commands.md
     - species-commands.md
     - currency.md
+    - custom-actions.md
   - House Rules:
     - hunting-foraging.md
     - downtime.md
