Add searching and investigating

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
     - currency.md
     - custom-actions.md
   - House Rules:
+    - searching.md
     - hunting-foraging.md
     - downtime.md
     - bastions.md
