--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
     - character.md
     - saves-checks.md
     - combat.md
+    - ammunition.md
     - class-commands.md
     - species-commands.md
     - currency.md
