Add some house rules on combat.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
     - custom-actions.md
   - House Rules:
     - searching.md
+    - combat-mechanics.md
     - hunting-foraging.md
     - downtime.md
     - bastions.md
