Add healing potions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
     - saves-checks.md
     - combat.md
     - ammunition.md
+    - healpot.md
     - class-commands.md
     - species-commands.md
     - currency.md
